--- a/package.json
+++ b/package.json
@@ -86,7 +86,9 @@
     "swr": "^2.3.3",
     "yarn": "^1.22.22",
     "yet-another-react-lightbox": "^3.23.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "recharts": "^2.8.0",
+    "d3": "^7.8.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
