--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "packageManager": "yarn@1.22.22",
   "dependencies": {
+    "@tiptap/starter-kit": "^2.12.0",
+    "@tippyjs/react": "^4.2.6",
+    "apexcharts": "^4.7.0",
     "@emotion/cache": "^11.13.5",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
