--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "packageManager": "yarn@1.22.22",
   "dependencies": {
+    "jspdf": "^2.5.1",
     "@emotion/cache": "^11.13.5",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
@@ -60,11 +61,13 @@
     "es-toolkit": "^1.29.0",
     "flag-icons": "^7.3.2",
     "framer-motion": "^11.13.1",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.5",
     "i18n-iso-countries": "^7.14.0",
     "i18next": "^25.1.1",
     "i18next-browser-languagedetector": "^8.1.0",
     "i18next-resources-to-backend": "^1.2.1",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lowlight": "^3.3.0",
     "minimal-shared": "^1.0.3",
