--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-VITE_SERVER_URL=https://api.talentai-test.test/
+VITE_SERVER_URL=https://api-service.talentexpo.ai
 
 # Public resource directory
 VITE_ASSETS_DIR=
