--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -20,14 +20,39 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install dependencies (ignore peer conflicts)
+        run: npm install --legacy-peer-deps
 
       - name: Run tests
         run: npm test
 
-  deploy:
+  docker-build-and-push:
     needs: build-and-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.amenihadjem }}
+          password: ${{ secrets.TALENTEXPO_FRONT }}
+
+      - name: Build & push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            amenihadjem/frontend_talentexpo_main:main
+            amenihadjem/frontend_talentexpo_main:latest
+
+  deploy:
+    needs: docker-build-and-push
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -36,4 +61,4 @@ jobs:
       - name: Deploy
         run: |
           echo "Déploiement de la branche main"
-          # Ici tu mets ton script de déploiement, ex: Vercel, Docker, ou serveur
+          # Exemple : ssh user@server "docker pull amenihadjem/frontend_talentexpo_main:main && docker run -d -p 80:80 --name frontend_container amenihadjem/frontend_talentexpo_main:main"
